# GitHub-Automator

./: Cargo.toml  README.md
src/: main.rs
